--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -19,7 +19,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.26 2003/10/04 17:23:07 jaco Exp $
+# $Id: mklivecd.in,v 1.27 2003/10/04 17:24:40 jaco Exp $
 #
 
 PATH=/sbin:/usr/sbin:$PATH
@@ -56,7 +56,7 @@ isoimage=""
 isobootkeymsg=""
 resolution="@DEF_RESOLUTION@"
 vgamode="@DEF_VGAMODE@"
-bootsplash="splash=yes"
+bootsplash=1
 
 usage () {
 	echo "Usage:" >&2
@@ -510,9 +510,9 @@ while [ $# -gt 0 ]; do
 				shift
 			fi
 			if [ $yn == yes ]; then
-				bootsplash="splash=yes"
+				bootsplash=1
 			else
-				bootsplash=""
+				bootsplash=
 			fi
 			;;
 
