--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -19,7 +19,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.33 2003/10/05 07:39:09 jaco Exp $
+# $Id: mklivecd.in,v 1.34 2003/10/05 07:53:08 jaco Exp $
 #
 
 PATH=/sbin:/usr/sbin:$PATH
@@ -399,24 +399,29 @@ create_liveiso() {
 
 check_theme() {
 	[ -z "$theme" ] && return 0
-	current_theme="`${rootdir}/usr/share/bootsplash/scripts/switch-themes -c`"
-	current_theme="${current_theme#*: }"
-	if [ "$theme" != "$current_theme" ]
-	then
-		# Is it available?
-		have_requested_theme=0
-		for i in `${rootdir}/usr/share/bootsplash/scripts/switch-themes -l|awk '{if ($1!="Available") print $1}'`
-		do
-			[ "$i" -eq "$theme" ] && have_requested_theme=1 || :
-		done
-		if [ $have_request_theme -eq 0 ]
+	if [ -x ${rootdir}usr/share/bootsplash/scripts/switch-themes ]; then
+		current_theme="`chroot ${rootdir} /usr/share/bootsplash/scripts/switch-themes -c`"
+		current_theme="${current_theme#*: }"
+		if [ "$theme" != "$current_theme" ]
 		then
-			echo "ERROR: The specified bootsplash theme, '$theme', is not available" >&2
-			exit 1
-		fi
+			# Is it available?
+			have_requested_theme=0
+			for i in `chroot ${rootdir} /usr/share/bootsplash/scripts/switch-themes -l|awk '{if ($1!="Available") print $1}'`
+			do
+				[ "$i" == "$theme" ] && have_requested_theme=1 || :
+			done
+			if [ $have_request_theme == 0 ]
+			then
+				echo "ERROR: The specified bootsplash theme, '$theme', is not available" >&2
+				exit 1
+			fi
 
-		#We have the theme, so change it
-		${rootdir}/usr/share/bootsplash/scripts/switch-themes "$theme"
+			#We have the theme, so change it
+			chroot ${rootdir} /usr/share/bootsplash/scripts/switch-themes "$theme"
+		fi
+	else
+		echo "ERROR: '${rootdir}usr/share/bootsplash/scripts/switch-themes' does not exist. Cannot adhere to '--theme' option." >&2
+		exit 1
 	fi
 }
 
@@ -424,7 +429,7 @@ restore_theme() {
 	[ -z "$theme" ] && return 0
 	if [ "$theme" != "$current_theme" ]
 	then
-		${rootdir}/usr/share/bootsplash/scripts/switch-themes "$current_theme"
+		chroot ${rootdir} /usr/share/bootsplash/scripts/switch-themes "$current_theme"
 	fi
 }
 
@@ -707,6 +712,14 @@ if [ -n "$isographic" ]; then
 	fi
 	if [ -z "$isobootmsg" ]; then
 		echo "ERROR: You should specify the '--iso-bootmsg' option in conjunction with the '--iso-graphic' option/" >&2
+		exit 1
+	fi
+fi
+
+### do we have correct theme options?
+if [ -n "$theme" ]; then
+	if [ -z "$bootsplash" ]; then
+		echo "ERROR: The '--theme' option can only be used with bootsplash enabled ('--splash') enabled." >&2
 		exit 1
 	fi
 fi
