--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -19,7 +19,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.34 2003/10/05 07:53:08 jaco Exp $
+# $Id: mklivecd.in,v 1.35 2003/10/05 07:55:47 jaco Exp $
 #
 
 PATH=/sbin:/usr/sbin:$PATH
@@ -405,12 +405,12 @@ check_theme() {
 		if [ "$theme" != "$current_theme" ]
 		then
 			# Is it available?
-			have_requested_theme=0
+			have_requested_theme="0"
 			for i in `chroot ${rootdir} /usr/share/bootsplash/scripts/switch-themes -l|awk '{if ($1!="Available") print $1}'`
 			do
 				[ "$i" == "$theme" ] && have_requested_theme=1 || :
 			done
-			if [ $have_request_theme == 0 ]
+			if [ "$have_request_theme" == "0" ]
 			then
 				echo "ERROR: The specified bootsplash theme, '$theme', is not available" >&2
 				exit 1
