--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -19,7 +19,7 @@
 #
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org> hwdetect script
 #
-# $Id: hwdetect.in,v 1.21 2003/10/06 06:56:04 jaco Exp $
+# $Id: hwdetect.in,v 1.22 2003/10/06 07:01:04 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -326,10 +326,12 @@ sub hwdetect_probepci() {
 			if ($pci->{media_type} =~ /SERIAL_USB/) {
 				hwdetect_loadmod($pci->{driver}, $probed_vendor, $probed_desc);
 				modules::add_probeall("usb-interface", $pci->{driver}) unless ($probe);
+				print "modules::add_probeall('usb-interface', '".$pci->{driver}."')\n" if ($debug);
 			}
 			elsif ($pci->{media_type} =~ /STORAGE_SCSI/) {
 				hwdetect_loadmod($pci->{driver}, $probed_vendor, $probed_desc);
 				modules::add_probeall("scsi_hostadapter", $pci->{driver}) unless ($probe);
+				print "modules::add_probeall('scsi_hostadapter', '".$pci->{driver}."')\n" if ($debug);
 			}
 			elsif ($pci->{media_type} =~ /BRIDGE_CARDBUS/) {
 				hwdetect_loadmod($pci->{driver}, $probed_vendor, $probed_desc);
@@ -497,6 +499,7 @@ sub hwdetect_getsound {
 	foreach my $card (@probed_cards) {
 		my ($probed_vendor, $probed_desc) = split(/\|/, $card->{description});
 		modules::add_alias("sound-slot-$num", $card->{driver}) unless ($probe);
+		print "modules::add_alias('sound-slot-$num', '".$card->{driver}."')\n" if ($debug);
 		$num++;
 		hwdetect_loadmod($card->{driver}, $probed_vendor, $probed_desc);
 		print_hash($card) if ($debug);
@@ -513,6 +516,7 @@ sub hwdetect_getnetwork {
 	foreach my $card (@probed_cards) {
 		my ($probed_vendor, $probed_desc) = split(/\|/, $card->{description});
 		modules::add_alias("eth$num", $card->{driver}) unless ($probe);
+		print "modules::add_alias('eth$num', '".$card->{driver}."')\n" if ($debug);
 		$num++;
 		hwdetect_loadmod($card->{driver}, $probed_vendor, $probed_desc);
 		print_hash($card) if ($debug);
